--- a/compose.yaml
+++ b/compose.yaml
@@ -6,27 +6,27 @@ services:
       PGID: 1000
     ports:
     - target: 1900
-      host_ip: 127.0.0.1
+      host_ip: '0.0.0.0'
       published: 1900
       protocol: udp
       mode: host
     - target: 3478
-      host_ip: 127.0.0.1
+      host_ip: '0.0.0.0'
       published: 3478
       protocol: udp
       mode: host
     - target: 8080
-      host_ip: 127.0.0.1
+      host_ip: '0.0.0.0'
       published: 8080
       protocol: tcp
       mode: host
     - target: 8443
-      host_ip: 127.0.0.1
+      host_ip: '0.0.0.0'
       published: 8443
       protocol: tcp
       mode: host
     - target: 10001
-      host_ip: 127.0.0.1
+      host_ip: '0.0.0.0'
       published: 10001
       protocol: udp
       mode: host
